--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -4,6 +4,11 @@
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
 
+
+source 'https://github.com/CocoaPods/Specs.git'
+source 'https://github.com/aliyun/aliyun-specs.git'
+
+
 project 'Runner', {
   'Debug' => :debug,
   'Profile' => :release,
