集成第三方辅助通道

--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:name=".MyApplication"
         android:label="rammus_example"
         tools:replace="android:label"
+        android:usesCleartextTraffic="true"
         android:icon="@mipmap/ic_launcher">
 
         <meta-data
@@ -19,7 +20,39 @@
         <meta-data
             android:name="com.alibaba.app.appsecret"
             android:value="" /> <!-- 请填写你自己的appSecret -->
-
+        <meta-data
+          android:name="com.huawei.hms.client.appid"
+          android:value="" />
+        <meta-data
+          android:name="com.xiaomi.push.client.app_id"
+          android:value=""/>
+        <meta-data
+          android:name="com.xiaomi.push.client.app_key"
+          android:value="" />
+        <meta-data
+          android:name="com.oppo.push.client.app_key"
+          android:value="" />
+        <meta-data
+          android:name="com.oppo.push.client.app_secret"
+          android:value="" />
+        <meta-data
+          android:name="com.meizu.push.client.app_id"
+          android:value="" />
+        <meta-data
+          android:name="com.meizu.push.client.app_key"
+          android:value="" />
+        <meta-data
+          android:name="com.vivo.push.app_id"
+          android:value="" />
+        <meta-data
+          android:name="com.vivo.push.api_key"
+          android:value="" />
+        <meta-data
+          android:name="com.gcm.push.send_id"
+          android:value="" />
+        <meta-data
+          android:name="com.gcm.push.app_id"
+          android:value="" />
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
@@ -39,5 +72,38 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name="com.jarvanmo.rammus.PopupPushActivity" android:exported="true"/>
+        <!--
+        <service android:enabled="true" android:process=":pushservice" android:name="com.xiaomi.push.service.XMPushService"/>
+        <service android:name="com.xiaomi.push.service.XMJobService" android:enabled="true" android:exported="false" android:permission="android.permission.BIND_JOB_SERVICE" android:process=":pushservice" />
+        <service android:enabled="true" android:exported="true" android:name="com.xiaomi.mipush.sdk.PushMessageHandler" />
+
+        <service android:enabled="true" android:name="com.xiaomi.mipush.sdk.MessageHandleService" />
+        <receiver android:exported="true" android:name="com.xiaomi.push.service.receivers.NetworkStatusReceiver" >
+        <intent-filter>
+            <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+            <category android:name="android.intent.category.DEFAULT" />
+        </intent-filter>
+    </receiver>
+        <receiver android:exported="false" android:process=":pushservice" android:name="com.xiaomi.push.service.receivers.PingReceiver" >
+            <intent-filter>
+                <action android:name="com.xiaomi.push.PING_TIMER" />
+            </intent-filter>
+        </receiver>-->
     </application>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.GET_TASKS" />
+    <uses-permission android:name="android.permission.REORDER_TASKS" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <!--<permission android:name="com.chuangdun.borderkeeper.permission.MIPUSH_RECEIVE"
+      android:protectionLevel="signature" />
+    <uses-permission android:name="com.chuangdun.borderkeeper.permission.MIPUSH_RECEIVE" />-->
 </manifest>
