'集成第三方推送，多NotificationChannel设置'

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -49,6 +49,14 @@ dependencies {
 
     api 'com.aliyun.ams:alicloud-android-push:3.1.9.1'
     api 'com.aliyun.ams:alicloud-android-third-push:3.1.0@aar'
-    implementation 'com.aliyun.ams:huawei-push:2.6.3.305'
+    /*implementation 'com.aliyun.ams:huawei-push:2.6.3.305'
     implementation 'com.aliyun.ams:huawei-push-base:2.6.3.305'
+    implementation 'com.google.firebase:firebase-messaging:17.6.0'
+    implementation 'com.aliyun.ams:meizu-push:3.8.7.1'
+    implementation 'com.aliyun.ams:third_vivopush:2.9.0.1'*/
+    compileOnly 'com.aliyun.ams:huawei-push:2.6.3.305'
+    compileOnly 'com.aliyun.ams:huawei-push-base:2.6.3.305'
+    compileOnly 'com.google.firebase:firebase-messaging:17.6.0'
+    compileOnly 'com.aliyun.ams:meizu-push:3.8.7.1'
+    compileOnly 'com.aliyun.ams:third_vivopush:2.9.0.1'
 }
