--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,8 +24,12 @@ flutter:
   # be modified. They are used by the tooling to maintain consistency when
   # adding or updating assets for this project.
   plugin:
-    androidPackage: com.jarvanmo.rammus
-    pluginClass: RammusPlugin
+    platforms:
+      android:
+        package: com.jarvan.rammus
+        pluginClass: FluwxPlugin
+      ios:
+        pluginClass: RammusPlugin
 
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
