--- a/android/build.gradle
+++ b/android/build.gradle
@@ -47,16 +47,15 @@ android {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    api 'com.aliyun.ams:alicloud-android-push:3.1.9.1'
-    api 'com.aliyun.ams:alicloud-android-third-push:3.1.0@aar'
-    /*implementation 'com.aliyun.ams:huawei-push:2.6.3.305'
-    implementation 'com.aliyun.ams:huawei-push-base:2.6.3.305'
-    implementation 'com.google.firebase:firebase-messaging:17.6.0'
-    implementation 'com.aliyun.ams:meizu-push:3.8.7.1'
-    implementation 'com.aliyun.ams:third_vivopush:2.9.0.1'*/
-    compileOnly 'com.aliyun.ams:huawei-push:2.6.3.305'
-    compileOnly 'com.aliyun.ams:huawei-push-base:2.6.3.305'
-    compileOnly 'com.google.firebase:firebase-messaging:17.6.0'
-    compileOnly 'com.aliyun.ams:meizu-push:3.8.7.1'
-    compileOnly 'com.aliyun.ams:third_vivopush:2.9.0.1'
+    //主通道依赖
+    api 'com.aliyun.ams:alicloud-android-push:3.7.2'
+    //辅助通道依赖
+    api 'com.aliyun.ams:alicloud-android-third-push:3.7.2@aar'
+    //厂商通道依赖
+    implementation 'com.aliyun.ams:alicloud-android-third-push-huawei:3.7.2'
+    implementation 'com.aliyun.ams:alicloud-android-third-push-xiaomi:3.7.2'
+    implementation 'com.aliyun.ams:alicloud-android-third-push-oppo:3.7.2'
+    implementation 'com.aliyun.ams:alicloud-android-third-push-vivo:3.7.2'
+    implementation 'com.aliyun.ams:alicloud-android-third-push-meizu:3.7.2'
+    implementation 'com.aliyun.ams:alicloud-android-third-push-fcm:3.7.2'
 }
