--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,14 +2,17 @@ group 'com.jarvanmo.rammus'
 version '1.0-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.3.70'
+    ext.kotlin_version = '1.6.10'
     repositories {
         google()
-        jcenter()
+        mavenCentral()
+        maven {
+            url 'http://maven.aliyun.com/nexus/content/repositories/releases/'
+        }
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.1'
+        classpath 'com.android.tools.build:gradle:4.1.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -17,11 +20,11 @@ buildscript {
 rootProject.allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
         maven {
             url 'http://maven.aliyun.com/nexus/content/repositories/releases/'
         }
-
+        maven {url 'https://developer.huawei.com/repo/'}
     }
 }
 
@@ -29,7 +32,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 32
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
@@ -48,14 +51,14 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     //主通道依赖
-    api 'com.aliyun.ams:alicloud-android-push:3.7.2'
+    api 'com.aliyun.ams:alicloud-android-push:3.7.3'
     //辅助通道依赖
-    api 'com.aliyun.ams:alicloud-android-third-push:3.7.2@aar'
+    api 'com.aliyun.ams:alicloud-android-third-push:3.7.3@aar'
     //厂商通道依赖
-    implementation 'com.aliyun.ams:alicloud-android-third-push-huawei:3.7.2'
-    implementation 'com.aliyun.ams:alicloud-android-third-push-xiaomi:3.7.2'
-    implementation 'com.aliyun.ams:alicloud-android-third-push-oppo:3.7.2'
-    implementation 'com.aliyun.ams:alicloud-android-third-push-vivo:3.7.2'
-    implementation 'com.aliyun.ams:alicloud-android-third-push-meizu:3.7.2'
-    implementation 'com.aliyun.ams:alicloud-android-third-push-fcm:3.7.2'
+    implementation 'com.aliyun.ams:alicloud-android-third-push-huawei:3.7.3'
+    implementation 'com.aliyun.ams:alicloud-android-third-push-xiaomi:3.7.3'
+    implementation 'com.aliyun.ams:alicloud-android-third-push-oppo:3.7.3'
+    implementation 'com.aliyun.ams:alicloud-android-third-push-vivo:3.7.3'
+    implementation 'com.aliyun.ams:alicloud-android-third-push-meizu:3.7.3'
+    implementation 'com.aliyun.ams:alicloud-android-third-push-fcm:3.7.3'
 }
