--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -24,43 +24,32 @@ if (flutterVersionName == null) {
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
-def keystorePropertiesFile = rootProject.file("key.properties")
-def keystoreProperties = new Properties()
-keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion flutter.compileSdkVersion
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
 
-    lintOptions {
-        disable 'InvalidPackage'
-    }
-
     defaultConfig {
         applicationId "com.jarvanmo.rammus_example"
-        minSdkVersion 16
-        targetSdkVersion 28
+        minSdkVersion flutter.minSdkVersion
+        targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
-
-    signingConfigs {
-        debug {
-            keyAlias keystoreProperties['keyAlias']
-            keyPassword keystoreProperties['keyPassword']
-            storeFile file(keystoreProperties['storeFile'])
-            storePassword keystoreProperties['storePassword']
-        }
     }
 
     buildTypes {
-        debug {
-            signingConfig signingConfigs.debug
-        }
         release {
             signingConfig signingConfigs.debug
         }
@@ -73,9 +62,10 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.aliyun.ams:huawei-push:2.6.3.305'
-    implementation 'com.aliyun.ams:huawei-push-base:2.6.3.305'
-    implementation 'com.google.firebase:firebase-messaging:17.6.0'
-    implementation 'com.aliyun.ams:meizu-push:3.8.7.1'
-    implementation 'com.aliyun.ams:third_vivopush:2.9.0.1'
+    implementation 'com.aliyun.ams:alicloud-android-third-push-huawei:3.7.3'
+    implementation 'com.aliyun.ams:alicloud-android-third-push-xiaomi:3.7.3'
+    implementation 'com.aliyun.ams:alicloud-android-third-push-oppo:3.7.3'
+    implementation 'com.aliyun.ams:alicloud-android-third-push-vivo:3.7.3'
+    implementation 'com.aliyun.ams:alicloud-android-third-push-meizu:3.7.3'
+    implementation 'com.aliyun.ams:alicloud-android-third-push-fcm:3.7.3'
 }
